--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/skins/color1.css">
 </head>
 <body>
+
+    <p>Aditya sharma</p>
     
     <script src="js/script.js"></script>
 </body>
